--- a/main.ipynb
+++ b/main.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The AI Idea Factory\n",
+    "# <a id='toc1_'></a>[The AI Idea Factory](#toc0_)\n",
     "For my very first project in this year-long challenge, I'm gonna be creating a creative idea assitant. It will help me keep up with recent trends and also keep every new idea fresh!\n",
     "Let's see how I've built it!"
    ]
@@ -13,7 +13,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 0: Setting things up\n",
+    "**Table of contents**<a id='toc0_'></a>    \n",
+    "- [The AI Idea Factory](#toc1_)    \n",
+    "  - [Step 0: Setting things up](#toc1_1_)    \n",
+    "  - [Step 1: Creating the agents](#toc1_2_)    \n",
+    "    - [Researcher Agent](#toc1_2_1_)    \n",
+    "    - [Creative Director](#toc1_2_2_)    \n",
+    "    - [Planner](#toc1_2_3_)    \n",
+    "    - [Writer](#toc1_2_4_)    \n",
+    "    - [Content Reviewer](#toc1_2_5_)    \n",
+    "    - [Project Manager](#toc1_2_6_)    \n",
+    "  - [Step 2: Tasks](#toc1_3_)    \n",
+    "    - [Research Task](#toc1_3_1_)    \n",
+    "    - [Ideation Task](#toc1_3_2_)    \n",
+    "    - [Planning Task](#toc1_3_3_)    \n",
+    "    - [Instruction Writng Task](#toc1_3_4_)    \n",
+    "    - [Blog Post Writing Task](#toc1_3_5_)    \n",
+    "    - [Blog Post Review Task](#toc1_3_6_)    \n",
+    "    - [Blog Post Finalization Task](#toc1_3_7_)    \n",
+    "    - [Project Management Task](#toc1_3_8_)    \n",
+    "  - [Crew](#toc1_4_)    \n",
+    "\n",
+    "<!-- vscode-jupyter-toc-config\n",
+    "\tnumbering=false\n",
+    "\tanchor=true\n",
+    "\tflat=false\n",
+    "\tminLevel=1\n",
+    "\tmaxLevel=6\n",
+    "\t/vscode-jupyter-toc-config -->\n",
+    "<!-- THIS CELL WILL BE REPLACED ON TOC UPDATE. DO NOT WRITE YOUR TEXT IN THIS CELL -->"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <a id='toc1_1_'></a>[Step 0: Setting things up](#toc0_)\n",
     "In the first stage, we are going to be setting the foundation for this project, including setting up our LLMs, importing packages, writing our own custom tools etc."
    ]
   },
@@ -132,7 +167,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 1: Creating the agents\n",
+    "## <a id='toc1_2_'></a>[Step 1: Creating the agents](#toc0_)\n",
     "CrewAI has 3 main components: Agents, Tasks and Crews. Think of agents as colligues working together to achieve their final goal, while each person has their own set goals and skills.\n",
     "In this project, we will create 6 Agents.\n"
    ]
@@ -141,7 +176,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Researcher Agent\n",
+    "### <a id='toc1_2_1_'></a>[Researcher Agent](#toc0_)\n",
     "The researcher agent is a pivotal agent in the workflow. As the name suggests, the main functionality of this agent is going to be searching the web and credible sources for the latest, cutting-edge AI technology advancements."
    ]
   },
@@ -181,7 +216,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Creative Director"
+    "### <a id='toc1_2_2_'></a>[Creative Director](#toc0_)"
    ]
   },
   {
@@ -229,7 +264,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Planner"
+    "### <a id='toc1_2_3_'></a>[Planner](#toc0_)"
    ]
   },
   {
@@ -270,7 +305,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Writer"
+    "### <a id='toc1_2_4_'></a>[Writer](#toc0_)"
    ]
   },
   {
@@ -312,7 +347,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Content Reviewer"
+    "### <a id='toc1_2_5_'></a>[Content Reviewer](#toc0_)"
    ]
   },
   {
@@ -357,7 +392,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Project Manager"
+    "### <a id='toc1_2_6_'></a>[Project Manager](#toc0_)"
    ]
   },
   {
@@ -397,7 +432,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 2: Tasks\n",
+    "## <a id='toc1_3_'></a>[Step 2: Tasks](#toc0_)\n",
     "As said by the official documents of CrewAI, tasks are specific assignments completed by agents. They provide all necessary details for execution, such as a description, the agent responsible, required tools, and more, facilitating a wide range of action complexities.\n",
     "\n",
     "Tasks within crewAI can be collaborative, requiring multiple agents to work together. This is managed through the task properties and orchestrated by the Crew's process, enhancing teamwork and efficiency."
@@ -407,7 +442,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Research Task\n",
+    "### <a id='toc1_3_1_'></a>[Research Task](#toc0_)\n",
     "The first task that needs to be done in this workflow, is the research. As we went through earlier, the goal of the researcher agent is to retrieve the newest AI advancements and technologies.\n",
     "Here is how we define its task:"
    ]
@@ -432,7 +467,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ideation Task"
+    "### <a id='toc1_3_2_'></a>[Ideation Task](#toc0_)"
    ]
   },
   {
@@ -463,7 +498,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Planning Task"
+    "### <a id='toc1_3_3_'></a>[Planning Task](#toc0_)"
    ]
   },
   {
@@ -488,7 +523,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Instruction Writng Task"
+    "### <a id='toc1_3_4_'></a>[Instruction Writng Task](#toc0_)"
    ]
   },
   {
@@ -513,7 +548,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Blog Post Writing Task"
+    "### <a id='toc1_3_5_'></a>[Blog Post Writing Task](#toc0_)"
    ]
   },
   {
@@ -543,7 +578,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Blog Post Review Task"
+    "### <a id='toc1_3_6_'></a>[Blog Post Review Task](#toc0_)"
    ]
   },
   {
@@ -566,7 +601,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Blog Post Finalization Task"
+    "### <a id='toc1_3_7_'></a>[Blog Post Finalization Task](#toc0_)"
    ]
   },
   {
@@ -589,7 +624,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Project Management Task"
+    "### <a id='toc1_3_8_'></a>[Project Management Task](#toc0_)"
    ]
   },
   {
@@ -604,7 +639,6 @@
     "    content creation. Ensure all tasks are completed in the correct order and that the output of \n",
     "    each task is suitable for the next. Coordinate between agents if clarification or additional \n",
     "    information is needed. Provide a final summary report of the week's activities and outcomes.\"\"\",\n",
-    "    agent=project_manager,\n",
     "    delegations=False\n",
     ")"
    ]
@@ -613,7 +647,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Crew"
+    "## <a id='toc1_4_'></a>[Crew](#toc0_)"
    ]
   },
   {
