--- a/main.ipynb
+++ b/main.ipynb
@@ -176,8 +176,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <a id='toc1_2_1_'></a>[Researcher Agent](#toc0_)\n",
-    "The researcher agent is a pivotal agent in the workflow. As the name suggests, the main functionality of this agent is going to be searching the web and credible sources for the latest, cutting-edge AI technology advancements."
+    "### <a id='toc1_2_1_'></a>[Researcher Agent](#toc0_)"
    ]
   },
   {
@@ -442,9 +441,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <a id='toc1_3_1_'></a>[Research Task](#toc0_)\n",
-    "The first task that needs to be done in this workflow, is the research. As we went through earlier, the goal of the researcher agent is to retrieve the newest AI advancements and technologies.\n",
-    "Here is how we define its task:"
+    "### <a id='toc1_3_1_'></a>[Research Task](#toc0_)"
    ]
   },
   {
@@ -647,7 +644,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <a id='toc1_4_'></a>[Crew](#toc0_)"
+    "## <a id='toc1_4_'></a>[Crew](#toc0_)\n",
+    "The last essential part to any CrewAI program is the crew. Think of the crew as a workspace, where all the collegues work together and collaborate."
    ]
   },
   {
