--- a/main.ipynb
+++ b/main.ipynb
@@ -74,9 +74,7 @@
    "outputs": [],
    "source": [
     "load_dotenv()\n",
-    "os.environ[\"OPENAI_API_BASE\"]='http://localhost:11434/v1'\n",
-    "os.environ[\"OPENAI_MODEL_NAME\"]='llama3.1'  \n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"NA\""
+    "os.environ[\"OPENAI_API_KEY\"] = \"NA\" # The API key is required, but unused"
    ]
   },
   {
@@ -93,7 +91,7 @@
    "outputs": [],
    "source": [
     "llama3p1 = ChatOpenAI(\n",
-    "    model=\"ollama/llama3.1\",\n",
+    "    model=\"ollama/llama3.1\", # Use a model that you have pulled\n",
     "    base_url=\"http://localhost:11434/v1\",\n",
     ")\n",
     "mistral = ChatOpenAI(\n",
